--- a/isteven-omni-bar.css
+++ b/isteven-omni-bar.css
@@ -30,12 +30,11 @@
 }
 
 .infoText {    
-    font-weight: bold;
+    font-weight: normal;
     position: absolute;
     width: 100%;
     text-align: center;
-    color: #fff;        
+    color: #bdbdbd;        
     z-index: 2;
-    padding-top: 5px;
     text-shadow: 1px 1px #444;
 }
